# LSS_forward_model

./: .gitignore  DEPENDENCIES.md  LICENSE  README.md  environment.yml  environment_Gower_pipeline.yml  pyproject.toml  setup.py
Data/: Baryonification_default_parameters.npy  SC_RR2_fit.npy
Examples/: 2026_02_02_rotate_GS_shear_maps.py  Cosmogrid.ipynb  FS.ipynb  Flamingo.ipynb  Forward_model_DES.ipynb  Forward_model_Euclid.ipynb  Prepare_RR2.ipynb  Tutorial.ipynb
Examples/.ipynb_checkpoints/: Forward_model_Euclid-checkpoint.ipynb
LSS_forward_model/: PKDGRAV_and_postprocessing_utilities.py  __init__.py  cosmology.py  halos.py  lensing.py  maps.py  theory.py  tsz.py
LSS_forward_model/.ipynb_checkpoints/: PKDGRAV_and_postprocessing_utilities-checkpoint.py
Projects/RR2/: generate_mocks.py  generate_mocks_DES_DECADE.py
utilities/: Post_process.ipynb
