[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LSS-forward-model"
version = "0.1.0"
description = "Forward modeling of N-body simulations into noiseless cosmological fields and survey-realistic weak-lensing mocks"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Marco Gatti", email = "marcogatti29@gmail.com"},
]
license = {text = "MIT"}
keywords = [
  "cosmology",
  "large-scale structure",
  "weak lensing",
  "simulation-based inference",
  "N-body simulations",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.24,<2",
  "scipy>=1.12,<2",
  "pandas>=2,<3",
  "astropy>=6,<8",
  "h5py>=3.10,<4",
  "healpy>=1.17,<2",
  "camb>=1.5.9,<2",
  "pyccl>=3.1.2,<4",
  "glass @ git+https://github.com/glass-dev/glass.git@ba9b1b5",
  "cosmology==2022.10.9",
  "frogress>=0.10,<1",
  "colossus>=1.3.6,<2",
  "pyarrow>=15,<20",
  "joblib>=1.4,<2",
  "BaryonForge @ git+https://github.com/DhayaaAnbajagane/BaryonForge.git@25e2e002201b9f47aaec1c309538bb5291b6deec",
]

[project.optional-dependencies]
notebooks = [
  "ipykernel>=6,<7",
  "jupyterlab>=4,<5",
  "matplotlib>=3.8,<4",
]
hpc = [
  "mpi4py>=4,<5",
]
survey-masks = [
  "healsparse>=1.11,<2",
]
emulator = [
  "euclidemu2",
]
test = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
]

[project.urls]
Repository = "https://github.com/mgatti29/LSS_forward_model"
Issues = "https://github.com/mgatti29/LSS_forward_model/issues"

[tool.setuptools.packages.find]
include = ["LSS_forward_model*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
